@@ -27,6 +27,9 @@ PHP                                                                        NEWS
     with itself). (nielsdos)
   . Fixed bug #77686 (Removed elements are still returned by getElementById).
     (nielsdos)
+  . Fixed bug #70359 (print_r() on DOMAttr causes Segfault in
+    php_libxml_node_free_list()). (nielsdos)
+  . Fixed bug #78577 (Crash in DOMNameSpace debug info handlers). (nielsdos)
 
 - Opcache:
   . Fix allocation loop in zend_shared_alloc_startup(). (nielsdos)
